// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for isDisabledOrLoading: false, aspectRatio: "4/3", size: "medium", weight: "semi-bold", align: bottom, isCompact: false, hasGradient: true and isDisabled: false 1`] = `
":host {
  display: flex;
  align-items: stretch;
  color-scheme: dark;
  hyphens: auto;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot {
  display: block;
}
slot:not([name]) {
  width: 100%;
  height: 100%;
  transition: transform var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-in-out);
}
slot[name="header"] {
  grid-area: 2/2;
  z-index: 3;
}
slot[name="footer"] {
  grid-row: 2;
  z-index: 3;
}
::slotted(:is(img,video,picture)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
}
::slotted(:is(img,video)) {
  object-fit: cover !important;
}
a {
  grid-area: 1/1/-1 /-1;
  z-index: 4;
  outline: 0;
}
p {
  all: unset;
  z-index: 3;
  max-width: 34.375rem;
  font: var(--p-font-weight-normal) var(--p-typescale-md) / var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-primary);
  hyphens: inherit;
  font-size: var(--p-typescale-md);
  font-weight: var(--p-font-weight-semibold);
}
@supports (-webkit-hyphens: auto) {
  :host {
    align-items: baseline;
  }
}

.root {
  display: grid;
  grid-template: var(--p-spacing-fluid-md) auto minmax(0px, 1fr) auto var(--p-spacing-fluid-md)/var(--p-spacing-fluid-md) minmax(0px, 1fr) var(--p-spacing-fluid-md);
  width: 100%;
  border-radius: var(--_p-legacy-radius-large,var(--p-radius-4xl));
  aspect-ratio: 4/3;
  cursor: pointer;
}
.root::after {
  content: "";
  z-index: 2;
  grid-area: 4/1/6/-1;
  background: linear-gradient(to top, hsla(from var(--p-color-canvas) h s l / .8) 0%,hsla(from var(--p-color-canvas) h s l / .8) 8.1%,hsla(from var(--p-color-canvas) h s l / .8) 15.5%,hsla(from var(--p-color-canvas) h s l / .8) 22.5%,hsla(from var(--p-color-canvas) h s l / .78) 29%,hsla(from var(--p-color-canvas) h s l / .73) 35.3%,hsla(from var(--p-color-canvas) h s l / .67) 41.2%,hsla(from var(--p-color-canvas) h s l / .6) 47.1%,hsla(from var(--p-color-canvas) h s l / .52) 52.9%,hsla(from var(--p-color-canvas) h s l / .44) 58.8%,hsla(from var(--p-color-canvas) h s l / .33) 64.7%,hsla(from var(--p-color-canvas) h s l / .22) 71%,hsla(from var(--p-color-canvas) h s l / .12) 77.5%,hsla(from var(--p-color-canvas) h s l / .05) 84.5%,hsla(from var(--p-color-canvas) h s l / .011) 91.9%,hsla(from var(--p-color-canvas) h s l / 0) 100%);;
  margin-top: calc(var(--p-spacing-fluid-lg) * -1);
  border-end-start-radius: inherit;
  border-end-end-radius: inherit;
}
.media {
  position: relative;
  grid-area: 1/1/-1 /-1;
  z-index: 1;
  overflow: hidden;
  border-radius: inherit;
}
.footer {
  grid-area: 4/2;
  display: flex;
  flex-direction: column;
  align-items: start;
}
.link-or-button-pure {
  z-index: 5;
  grid-column: 2;
  grid-row: 1/2;
  align-self: flex-end;
  display: none;
}
.link-or-button {
  min-height: 54px;
  z-index: 5;
  margin-top: var(--p-spacing-static-md);
  display: inline-block;
}
@media(hover:hover) {
  .root:hover slot:not([name]) {
    transform: scale3d(1.05,1.05,1.05);
  }
}

@supports (-webkit-hyphens: auto) {
  .root {
    height: 100%;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for isDisabledOrLoading: false, aspectRatio: "9/16", size: "medium", weight: "semi-bold", align: bottom, isCompact: false, hasGradient: false and isDisabled: false 1`] = `
":host {
  display: flex;
  align-items: stretch;
  color-scheme: dark;
  hyphens: auto;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot {
  display: block;
}
slot:not([name]) {
  width: 100%;
  height: 100%;
  transition: transform var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-in-out);
}
slot[name="header"] {
  grid-area: 2/2;
  z-index: 3;
}
slot[name="footer"] {
  grid-row: 2;
  z-index: 3;
}
::slotted(:is(img,video,picture)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
}
::slotted(:is(img,video)) {
  object-fit: cover !important;
}
a {
  grid-area: 1/1/-1 /-1;
  z-index: 4;
  outline: 0;
}
p {
  all: unset;
  z-index: 3;
  max-width: 34.375rem;
  font: var(--p-font-weight-normal) var(--p-typescale-md) / var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-primary);
  hyphens: inherit;
  font-size: var(--p-typescale-md);
  font-weight: var(--p-font-weight-semibold);
}
@supports (-webkit-hyphens: auto) {
  :host {
    align-items: baseline;
  }
}

.root {
  display: grid;
  grid-template: var(--p-spacing-fluid-md) auto minmax(0px, 1fr) auto var(--p-spacing-fluid-md)/var(--p-spacing-fluid-md) minmax(0px, 1fr) var(--p-spacing-fluid-md);
  width: 100%;
  border-radius: var(--_p-legacy-radius-large,var(--p-radius-4xl));
  aspect-ratio: 9/16;
  cursor: pointer;
}
.media {
  position: relative;
  grid-area: 1/1/-1 /-1;
  z-index: 1;
  overflow: hidden;
  border-radius: inherit;
}
.footer {
  grid-area: 4/2;
  display: flex;
  flex-direction: column;
  align-items: start;
}
.link-or-button-pure {
  z-index: 5;
  grid-column: 2;
  grid-row: 1/2;
  align-self: flex-end;
  display: none;
}
.link-or-button {
  min-height: 54px;
  z-index: 5;
  margin-top: var(--p-spacing-static-md);
  display: inline-block;
}
@media(hover:hover) {
  .root:hover slot:not([name]) {
    transform: scale3d(1.05,1.05,1.05);
  }
}

@supports (-webkit-hyphens: auto) {
  .root {
    height: 100%;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for isDisabledOrLoading: false, aspectRatio: "16/9", size: "inherit", weight: "regular", align: top, isCompact: true, hasGradient: false and isDisabled: true 1`] = `
":host {
  display: flex;
  align-items: stretch;
  color-scheme: dark;
  hyphens: auto;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot {
  display: block;
}
slot:not([name]) {
  width: 100%;
  height: 100%;
  transition: transform var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-in-out);
}
slot[name="header"] {
  grid-area: 4/2;
  z-index: 3;
}
slot[name="footer"] {
  grid-row: 2;
  z-index: 3;
}
::slotted(:is(img,video,picture)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
}
::slotted(:is(img,video)) {
  object-fit: cover !important;
}
a {
  grid-area: 1/1/-1 /-1;
  z-index: 4;
  outline: 0;
}
p {
  all: unset;
  z-index: 3;
  max-width: 34.375rem;
  font: var(--p-font-weight-normal) var(--p-typescale-md) / var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-primary);
  hyphens: inherit;
  font-size: inherit;
  font-weight: var(--p-font-weight-normal);
}
@supports (-webkit-hyphens: auto) {
  :host {
    align-items: baseline;
  }
}

.root {
  display: grid;
  grid-template: var(--p-spacing-fluid-md) auto minmax(0px, 1fr) auto var(--p-spacing-fluid-md)/var(--p-spacing-fluid-md) minmax(0px, 1fr) var(--p-spacing-fluid-md);
  width: 100%;
  border-radius: var(--_p-legacy-radius-large,var(--p-radius-4xl));
  aspect-ratio: 16/9;
  cursor: pointer;
}
.media {
  position: relative;
  grid-area: 1/1/-1 /-1;
  z-index: 1;
  overflow: hidden;
  border-radius: inherit;
}
.footer {
  grid-area: 2/2;
  display: grid;
  grid-template-columns: minmax(0,1fr) auto;
  column-gap: var(--p-spacing-static-md);
}
.link-or-button-pure {
  z-index: 5;
  grid-column: 2;
  grid-row: 1/3;
  align-self: flex-start;
  display: inline-block;
}
.link-or-button {
  min-height: 54px;
  z-index: 5;
  margin-top: var(--p-spacing-static-md);
  display: none;
}
@media(hover:hover) {
  .root:hover slot:not([name]) {
    transform: scale3d(1.05,1.05,1.05);
  }
}

@supports (-webkit-hyphens: auto) {
  .root {
    height: 100%;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for isDisabledOrLoading: false, aspectRatio: {"base":"1/1","xs":"4/3","s":"3/4","m":"16/9","l":"9/16","xl":"1/1"}, size: {"base":"inherit","xs":"medium","s":"inherit","m":"large","l":"medium","xl":"large"}, weight: {"base":"semi-bold","xs":"regular","s":"semi-bold","m":"regular","l":"semi-bold","xl":"regular"}, align: top, isCompact: {"base":true,"xs":false,"s":true,"m":false,"l":true,"xl":false}, hasGradient: true and isDisabled: false 1`] = `
":host {
  display: flex;
  align-items: stretch;
  color-scheme: dark;
  hyphens: auto;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot {
  display: block;
}
slot:not([name]) {
  width: 100%;
  height: 100%;
  transition: transform var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-in-out);
}
slot[name="header"] {
  grid-area: 4/2;
  z-index: 3;
}
slot[name="footer"] {
  grid-row: 2;
  z-index: 3;
}
::slotted(:is(img,video,picture)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
}
::slotted(:is(img,video)) {
  object-fit: cover !important;
}
a {
  grid-area: 1/1/-1 /-1;
  z-index: 4;
  outline: 0;
}
p {
  all: unset;
  z-index: 3;
  max-width: 34.375rem;
  font: var(--p-font-weight-normal) var(--p-typescale-md) / var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-primary);
  hyphens: inherit;
  font-size: inherit;
  font-weight: var(--p-font-weight-semibold);
}
@media(min-width:480px) {
  p {
    font-size: var(--p-typescale-md);
    font-weight: var(--p-font-weight-normal);
  }
}

@media(min-width:760px) {
  p {
    font-size: inherit;
    font-weight: var(--p-font-weight-semibold);
  }
}

@media(min-width:1000px) {
  p {
    font-size: var(--p-typescale-lg);
    font-weight: var(--p-font-weight-normal);
  }
}

@media(min-width:1300px) {
  p {
    font-size: var(--p-typescale-md);
    font-weight: var(--p-font-weight-semibold);
  }
}

@media(min-width:1760px) {
  p {
    font-size: var(--p-typescale-lg);
    font-weight: var(--p-font-weight-normal);
  }
}

@supports (-webkit-hyphens: auto) {
  :host {
    align-items: baseline;
  }
}

.root {
  display: grid;
  grid-template: var(--p-spacing-fluid-md) auto minmax(0px, 1fr) auto var(--p-spacing-fluid-md)/var(--p-spacing-fluid-md) minmax(0px, 1fr) var(--p-spacing-fluid-md);
  width: 100%;
  border-radius: var(--_p-legacy-radius-large,var(--p-radius-4xl));
  aspect-ratio: 1/1;
  cursor: pointer;
}
.root::after {
  content: "";
  z-index: 2;
  grid-area: 1/1/3/-1;
  background: linear-gradient(to bottom, hsla(from var(--p-color-canvas) h s l / .8) 0%,hsla(from var(--p-color-canvas) h s l / .8) 8.1%,hsla(from var(--p-color-canvas) h s l / .8) 15.5%,hsla(from var(--p-color-canvas) h s l / .8) 22.5%,hsla(from var(--p-color-canvas) h s l / .78) 29%,hsla(from var(--p-color-canvas) h s l / .73) 35.3%,hsla(from var(--p-color-canvas) h s l / .67) 41.2%,hsla(from var(--p-color-canvas) h s l / .6) 47.1%,hsla(from var(--p-color-canvas) h s l / .52) 52.9%,hsla(from var(--p-color-canvas) h s l / .44) 58.8%,hsla(from var(--p-color-canvas) h s l / .33) 64.7%,hsla(from var(--p-color-canvas) h s l / .22) 71%,hsla(from var(--p-color-canvas) h s l / .12) 77.5%,hsla(from var(--p-color-canvas) h s l / .05) 84.5%,hsla(from var(--p-color-canvas) h s l / .011) 91.9%,hsla(from var(--p-color-canvas) h s l / 0) 100%);;
  margin-bottom: calc(var(--p-spacing-fluid-lg) * -1);
  border-start-start-radius: inherit;
  border-start-end-radius: inherit;
}
.media {
  position: relative;
  grid-area: 1/1/-1 /-1;
  z-index: 1;
  overflow: hidden;
  border-radius: inherit;
}
.footer {
  grid-area: 2/2;
  display: grid;
  grid-template-columns: minmax(0,1fr) auto;
  column-gap: var(--p-spacing-static-md);
}
.link-or-button-pure {
  z-index: 5;
  grid-column: 2;
  grid-row: 1/2;
  align-self: flex-start;
  display: inline-block;
}
.link-or-button {
  min-height: 54px;
  z-index: 5;
  margin-top: var(--p-spacing-static-md);
  display: none;
}
@media(min-width:480px) {
  .root {
    aspect-ratio: 4/3;
  }
  .footer {
    display: flex;
    flex-direction: column;
    align-items: start;
  }
  .link-or-button-pure {
    display: none;
  }
  .link-or-button {
    display: inline-block;
  }
}

@media(min-width:760px) {
  .root {
    aspect-ratio: 3/4;
  }
  .footer {
    display: grid;
    grid-template-columns: minmax(0,1fr) auto;
    column-gap: var(--p-spacing-static-md);
  }
  .link-or-button-pure {
    display: inline-block;
  }
  .link-or-button {
    display: none;
  }
}

@media(min-width:1000px) {
  .root {
    aspect-ratio: 16/9;
  }
  .footer {
    display: flex;
    flex-direction: column;
    align-items: start;
  }
  .link-or-button-pure {
    display: none;
  }
  .link-or-button {
    display: inline-block;
  }
}

@media(min-width:1300px) {
  .root {
    aspect-ratio: 9/16;
  }
  .footer {
    display: grid;
    grid-template-columns: minmax(0,1fr) auto;
    column-gap: var(--p-spacing-static-md);
  }
  .link-or-button-pure {
    display: inline-block;
  }
  .link-or-button {
    display: none;
  }
}

@media(min-width:1760px) {
  .root {
    aspect-ratio: 1/1;
  }
  .footer {
    display: flex;
    flex-direction: column;
    align-items: start;
  }
  .link-or-button-pure {
    display: none;
  }
  .link-or-button {
    display: inline-block;
  }
}

@media(hover:hover) {
  .root:hover slot:not([name]) {
    transform: scale3d(1.05,1.05,1.05);
  }
}

@supports (-webkit-hyphens: auto) {
  .root {
    height: 100%;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for isDisabledOrLoading: true, aspectRatio: "1/1", size: "inherit", weight: "regular", align: bottom, isCompact: false, hasGradient: true and isDisabled: true 1`] = `
":host {
  display: flex;
  align-items: stretch;
  color-scheme: dark;
  hyphens: auto;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot {
  display: block;
}
slot:not([name]) {
  width: 100%;
  height: 100%;
  transition: transform var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-in-out);
}
slot[name="header"] {
  grid-area: 2/2;
  z-index: 3;
}
slot[name="footer"] {
  grid-row: 2;
  z-index: 3;
}
::slotted(:is(img,video,picture)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
}
::slotted(:is(img,video)) {
  object-fit: cover !important;
}
a {
  grid-area: 1/1/-1 /-1;
  z-index: 4;
  outline: 0;
}
p {
  all: unset;
  z-index: 3;
  max-width: 34.375rem;
  font: var(--p-font-weight-normal) var(--p-typescale-md) / var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-primary);
  hyphens: inherit;
  font-size: inherit;
  font-weight: var(--p-font-weight-normal);
}
@supports (-webkit-hyphens: auto) {
  :host {
    align-items: baseline;
  }
}

.root {
  display: grid;
  grid-template: var(--p-spacing-fluid-md) auto minmax(0px, 1fr) auto var(--p-spacing-fluid-md)/var(--p-spacing-fluid-md) minmax(0px, 1fr) var(--p-spacing-fluid-md);
  width: 100%;
  border-radius: var(--_p-legacy-radius-large,var(--p-radius-4xl));
  aspect-ratio: 1/1;
  cursor: not-allowed;
}
.root::after {
  content: "";
  z-index: 2;
  grid-area: 4/1/6/-1;
  background: linear-gradient(to top, hsla(from var(--p-color-canvas) h s l / .8) 0%,hsla(from var(--p-color-canvas) h s l / .8) 8.1%,hsla(from var(--p-color-canvas) h s l / .8) 15.5%,hsla(from var(--p-color-canvas) h s l / .8) 22.5%,hsla(from var(--p-color-canvas) h s l / .78) 29%,hsla(from var(--p-color-canvas) h s l / .73) 35.3%,hsla(from var(--p-color-canvas) h s l / .67) 41.2%,hsla(from var(--p-color-canvas) h s l / .6) 47.1%,hsla(from var(--p-color-canvas) h s l / .52) 52.9%,hsla(from var(--p-color-canvas) h s l / .44) 58.8%,hsla(from var(--p-color-canvas) h s l / .33) 64.7%,hsla(from var(--p-color-canvas) h s l / .22) 71%,hsla(from var(--p-color-canvas) h s l / .12) 77.5%,hsla(from var(--p-color-canvas) h s l / .05) 84.5%,hsla(from var(--p-color-canvas) h s l / .011) 91.9%,hsla(from var(--p-color-canvas) h s l / 0) 100%);;
  margin-top: calc(var(--p-spacing-fluid-lg) * -1);
  border-end-start-radius: inherit;
  border-end-end-radius: inherit;
}
.media {
  position: relative;
  grid-area: 1/1/-1 /-1;
  z-index: 1;
  overflow: hidden;
  border-radius: inherit;
}
.footer {
  grid-area: 4/2;
  display: flex;
  flex-direction: column;
  align-items: start;
}
.link-or-button-pure {
  z-index: 5;
  grid-column: 2;
  grid-row: 1/3;
  align-self: flex-end;
  display: none;
}
.link-or-button {
  min-height: 54px;
  z-index: 5;
  margin-top: var(--p-spacing-static-md);
  display: inline-block;
}
@media(hover:hover) {
  .root:hover slot:not([name]) {
    transform: scale3d(1.05,1.05,1.05);
  }
}

@supports (-webkit-hyphens: auto) {
  .root {
    height: 100%;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for isDisabledOrLoading: true, aspectRatio: "3/4", size: "large", weight: "semi-bold", align: top, isCompact: false, hasGradient: true and isDisabled: false 1`] = `
":host {
  display: flex;
  align-items: stretch;
  color-scheme: dark;
  hyphens: auto;
}
:host([hidden]) {
  display: none !important;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
slot {
  display: block;
}
slot:not([name]) {
  width: 100%;
  height: 100%;
  transition: transform var(--p-transition-duration,var(--p-duration-md)) var(--p-ease-in-out);
}
slot[name="header"] {
  grid-area: 4/2;
  z-index: 3;
}
slot[name="footer"] {
  grid-row: 2;
  z-index: 3;
}
::slotted(:is(img,video,picture)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
}
::slotted(:is(img,video)) {
  object-fit: cover !important;
}
a {
  grid-area: 1/1/-1 /-1;
  z-index: 4;
  outline: 0;
}
p {
  all: unset;
  z-index: 3;
  max-width: 34.375rem;
  font: var(--p-font-weight-normal) var(--p-typescale-md) / var(--p-leading-normal) var(--p-font-porsche-next);
  color: var(--p-color-primary);
  hyphens: inherit;
  font-size: var(--p-typescale-lg);
  font-weight: var(--p-font-weight-semibold);
}
@supports (-webkit-hyphens: auto) {
  :host {
    align-items: baseline;
  }
}

.root {
  display: grid;
  grid-template: var(--p-spacing-fluid-md) auto minmax(0px, 1fr) auto var(--p-spacing-fluid-md)/var(--p-spacing-fluid-md) minmax(0px, 1fr) var(--p-spacing-fluid-md);
  width: 100%;
  border-radius: var(--_p-legacy-radius-large,var(--p-radius-4xl));
  aspect-ratio: 3/4;
  cursor: not-allowed;
}
.root::after {
  content: "";
  z-index: 2;
  grid-area: 1/1/3/-1;
  background: linear-gradient(to bottom, hsla(from var(--p-color-canvas) h s l / .8) 0%,hsla(from var(--p-color-canvas) h s l / .8) 8.1%,hsla(from var(--p-color-canvas) h s l / .8) 15.5%,hsla(from var(--p-color-canvas) h s l / .8) 22.5%,hsla(from var(--p-color-canvas) h s l / .78) 29%,hsla(from var(--p-color-canvas) h s l / .73) 35.3%,hsla(from var(--p-color-canvas) h s l / .67) 41.2%,hsla(from var(--p-color-canvas) h s l / .6) 47.1%,hsla(from var(--p-color-canvas) h s l / .52) 52.9%,hsla(from var(--p-color-canvas) h s l / .44) 58.8%,hsla(from var(--p-color-canvas) h s l / .33) 64.7%,hsla(from var(--p-color-canvas) h s l / .22) 71%,hsla(from var(--p-color-canvas) h s l / .12) 77.5%,hsla(from var(--p-color-canvas) h s l / .05) 84.5%,hsla(from var(--p-color-canvas) h s l / .011) 91.9%,hsla(from var(--p-color-canvas) h s l / 0) 100%);;
  margin-bottom: calc(var(--p-spacing-fluid-lg) * -1);
  border-start-start-radius: inherit;
  border-start-end-radius: inherit;
}
.media {
  position: relative;
  grid-area: 1/1/-1 /-1;
  z-index: 1;
  overflow: hidden;
  border-radius: inherit;
}
.footer {
  grid-area: 2/2;
  display: flex;
  flex-direction: column;
  align-items: start;
}
.link-or-button-pure {
  z-index: 5;
  grid-column: 2;
  grid-row: 1/2;
  align-self: flex-start;
  display: none;
}
.link-or-button {
  min-height: 54px;
  z-index: 5;
  margin-top: var(--p-spacing-static-md);
  display: inline-block;
}
@media(hover:hover) {
  .root:hover slot:not([name]) {
    transform: scale3d(1.05,1.05,1.05);
  }
}

@supports (-webkit-hyphens: auto) {
  .root {
    height: 100%;
  }
}
"
`;
